<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_permitted_reactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/holder_permitted_reaction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copy_message_text"
        style="@style/BottomActionDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="0dp"
        android:paddingVertical="15dp"
        android:text="@string/conversation_copy_message"
        app:icon="@drawable/ic_action_copy"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/list_permitted_reactions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_message_text"
        android:elevation="0dp"
        style="@style/BottomActionDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingVertical="15dp"
        android:text="@string/conversation_edit_message"
        app:icon="@drawable/ic_action_edit"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/copy_message_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_message"
        style="@style/BottomActionDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:icon="@drawable/ic_action_trash"
        android:paddingVertical="15dp"
        android:text="@string/conversation_delete_message"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/edit_message_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reply_message"
        style="@style/BottomActionDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:icon="@drawable/ic_action_reply"
        android:paddingVertical="15dp"
        android:text="@string/conversation_reply_message"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/delete_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forward_message"
        style="@style/BottomActionDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingVertical="15dp"
        android:text="@string/conversation_forward_message"
        app:icon="@drawable/ic_action_forward"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@+id/reply_message" />


</androidx.constraintlayout.widget.ConstraintLayout>