<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <io.fasthome.fenestram_messenger.uikit.custom_view.HooliToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/messenger_creating_chat" />

    <LinearLayout
        android:id="@+id/chat_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageButton
            android:id="@+id/chat_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_chat_photo" />

        <EditText
            android:id="@+id/chat_name"
            style="@style/Text.Light.16sp"
            android:layout_width="match_parent"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/messenger_input_chat_name"
            android:inputType="text"
            android:maxLength="22"
            android:maxLines="1"
            android:textColorHint="@color/gray2" />

    </LinearLayout>

    <TextView
        android:id="@+id/contacts_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark2"
        android:paddingVertical="10dp"
        android:paddingStart="32dp"
        android:text="@string/messenger_chat_participants"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/chat_info_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="60dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        style="@style/FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_fab_ready" />

</androidx.constraintlayout.widget.ConstraintLayout>